Rename projects
- Move modules to modules directory
- Added IDEA plugin
- Begin work on streamlining publishing with CI
- Begin work on IDEA IDE integration from build script
- Documentation improvements

Signed-off-by: Tin Švagelj <tin.svagelj@live.com>